--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "waypoints": "4.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "6.24.1",
     "browser-sync": "2.18.13",
     "del": "3.0.0",
@@ -33,6 +35,10 @@
     "postcss-mixins": "6.2.0",
     "postcss-nested": "2.1.2",
     "postcss-simple-vars": "4.1.0",
-    "webpack": "3.8.1"
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2"
+  },
+  "scripts": {
+    "build": "webpack"
   }
 }
